objects/QPRO_Survey__c.object
<CustomObject>
    <description>Used for Testing QuestionPro Survey tool, can be deleted once testing is completed</description>
    <fields>
        <fullName>Agree_to_Take_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agree to Take Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_Field__c</fullName>
        <label>Currency Field</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Field__c</fullName>
        <label>Email Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi_Select_Picklist__c</fullName>
        <label>Favorite Latin alphabet?</label>
        <picklist>
            <picklistValues>
                <fullName>Alpha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gamma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epsilon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Omega</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_3_Values__c</fullName>
        <label>Favorite Color?</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <label>Reference_ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_ID__c</fullName>
        <label>Response_ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Text_Field__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Existing_Record_1__c</fullName>
        <label>Update Existing Record 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Existing_Record_2__c</fullName>
        <label>Update Existing Record 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_your_birthday__c</fullName>
        <label>What is your birthday?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Text_Field__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>TEST-QuestionProObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>